# gopro-lib-node.gl

./: .gitignore  CMakeLists.txt  README.md
libnodegl/: .Makefile.swp  .api.c.swp  CMakeLists.txt  Makefile  android_api.c  android_api.h  android_imagereader.c  android_imagereader.h  api.c  backend.h  backend_gl.c  buffer.c  buffer_gl.c  buffer_vk.c  gctx.c  gctx.h  gctx_gl.c  gctx_gl.h  gctx_vk.c  gctx_vk.h  glcontext_egl.c  graphicstate.h  hwupload.c  hwupload_mediacodec_gl.c  hwupload_videotoolbox_darwin_vk.m  node_camera.c  node_graphicconfig.c  node_media.c  node_quad.c  node_rtt.c  node_texture.c  nodegl.h  nodes.h  pass.c  pass.h  pass_gl.c  pass_gl.h  pass_vk.c  pass_vk.h  pgcraft.c  (+5 more)
libnodegl/doc/: libnodegl.md
ngfx/: CMakeLists.txt  README.md
ngfx/data/shaders/: common.vert.h
ngfx/porting/d3d/: D3DComputePipeline.cpp  D3DDebugUtil.h  D3DDepthStencilView.cpp  D3DDepthStencilView.h  D3DFramebuffer.cpp  D3DFramebuffer.h  D3DGraphics.cpp  D3DGraphics.h  D3DGraphicsContext.cpp  D3DGraphicsContext.h  D3DGraphicsPipeline.cpp  D3DPipeline.cpp  D3DPipeline.h  D3DShaderModule.cpp  D3DTexture.cpp  D3DTexture.h
ngfx/porting/glfw/: GLFWWindow.cpp
ngfx/porting/metal/: MTLFramebuffer.mm  MTLGraphics.h  MTLGraphics.mm  MTLGraphicsPipeline.mm  MTLRenderPass.mm  MTLTexture.mm
ngfx/porting/vulkan/: VKDevice.cpp  VKGraphics.cpp  VKGraphics.h  VKPhysicalDevice.cpp  VKTexture.cpp
ngfx/src/: DebugUtil.h
ngfx/src/computeOps/: MatrixMultiplyGPUOp.cpp
ngfx/src/graphics/: Config.h  Graphics.h
ngfx/test/texture/: TextureApp.cpp  TextureApp.h
ngl-tools/: player.c
nodegl/: CMakeLists.txt
nodegl/data/shaders/: default.vert  drawText.vert
nodegl/porting/gl/: GLDebugUtil.h  GLGraphicsEngine.cpp  GLGraphicsEngine.h  NGLApplication.cpp  NGLApplication.h  NGLBackend.h  NGLRenderer.cpp  glGLFWWindow.cpp  glGLFWWindow.h  glShaderModule.cpp
nodegl/porting/ngfx/: NGLApplication.cpp  NGLApplication.h  NGLBackend.h  NGLRenderer.cpp  NGLWindowWrapper.cpp  NGLWindowWrapper.h
nodegl/pynodegl/: build.sh  build_dbg.sh  build_linux.sh  build_macos.sh  build_win64.sh  nodes_def.pyx  pynodegl.cpp  pynodegl.pyx  pynodegl_d.cp38-win_amd64.pyd  setup.py  setup_linux.py  setup_macos.py  setup_win64.py
nodegl/pynodegl-utils/: build_win64.sh  requirements.txt
nodegl/pynodegl-utils/pynodegl_utils/: config.py  misc.py
nodegl/pynodegl-utils/pynodegl_utils/examples/shaders/: testRTT.vert  test_histogram.comp  test_histogram_clear.comp  texture3D.vert  trianglesMat4Attr.vert
nodegl/pynodegl-utils/pynodegl_utils/tests/: cmp.py  cmp_cuepoints.py  cmp_fingerprint.py  cmp_resources.py  data.py  util.py
nodegl/pynodegl/pynodegl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nodegl/src/: AnimationUtil.cpp  DrawUtils.cpp  DrawUtils.h  FontData.cpp  FontData.h  MathUtils.cpp  NGL.cpp  NGL.h  NGLDeserialize.cpp  NGLSerialize.cpp  NGLSerializeParams.h  NGLSerializeTypes.h  StringUtil.cpp  StringUtil.h  nodegl.cpp  nodegl.h
nodegl/test/mediaPlayer/: MediaPlayer.cpp  MediaPlayer.h  MediaPlayerApp.cpp  MediaPlayerApp.h
nodegl/test/nglViewer/: NGLViewer.cpp
nodegl/test/unitTests/: anim.py  compute.py  data.py  live.py  rtt.py  shape.py  texture.py
nodegl/test/unitTests/scripts/: build.sh  debug.sh  debug_viewer.sh  env.sh  env_linux.sh  env_macos.sh  env_win64.sh  run.sh  run_all.sh  run_anim.sh  run_blending.sh  run_compute.sh  run_data.sh  run_live.sh  run_media.sh  run_rtt.sh  run_shape.sh  run_text.sh  run_texture.sh  run_transform.sh  status.sh  view_blending.sh
patches/: test_histogram.comp.hlsl.map.patch  test_histogram.comp.hlsl.patch
pynodegl/: pynodegl.pyx
pynodegl-utils/pynodegl_utils/: hooks.py  viewer.py
pyshell/: CMakeLists.txt
scripts/: append_license.py  clean.sh  compile_shaders_dx12.py  compile_shaders_mtl.py  compile_shaders_vk.py  copy_data.sh  env_win64.sh  install.sh  install_macos.sh  install_win64.sh  run_cmake_linux_vk.sh  run_cmake_mac.sh  run_cmake_mac_vk.sh  run_cmake_win64_dx12.sh  run_cmake_win64_vk.sh  set_env_mac.sh  shader_tools.py  uninstall.sh  uninstall_win64.sh
sxplayer/: CMakeLists.txt
tests/: api.py  rtt.py  shape.py
